my-app/src/app/config/config.component.css
body {
    background-color: #f3f5f5;
}
::-webkit-scrollbar {
    width: 2;  /* Remove scrollbar space */
    background: transparent;  /* Optional: just make scrollbar invisible */
}
/* Optional: show position indicator in red */
::-webkit-scrollbar-thumb {
    background: #b6b6b6;
}

.toolbar-color {
    color:rgb(240, 240, 240);
}

.btn-green {
    color: white;
    background-color: #0da682;
}

.btn-green-outline {
    border-color: #0da682;
    border: 2px solid #0da682;;
    color: #0da682;
}

.border-green {
    border-color: #0da682;
}

.row {
    padding-right: 0px;
    margin-right: 0px;
  }

